[package]
name = "bluefin"
version = "0.1.4"
edition = "2021"
description = "An experimental, secure, P2P, transport-layer protocol."
license = "MIT"
repository = "https://github.com/franklee26/bluefin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etherparse = "0.13.0"
rand = "0.8.5"
thiserror = "1.0.39"
tokio = { version = "1", features = ["full"] }

[lib]
name = "bluefin"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[profile.release]
opt-level = 3 
codegen-units = 1
lto = "fat"
