[package]
name = "bluefin"
version = "0.1.5"
edition = "2021"
description = "An experimental, secure, P2P, transport-layer protocol."
license = "MIT"
repository = "https://github.com/franklee26/bluefin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etherparse = "0.15.0"
local-ip-address = "0.6.3"
rand = "0.8.5"
rstest = "0.23.0"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full", "tracing"] }
console-subscriber = "0.4.1"
libc = "0.2.164"
sysctl = "0.6.0"
socket2 = "0.5.8"

[dev-dependencies]
local-ip-address = "0.6.3"
rstest = "0.23.0"

[lib]
name = "bluefin"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)', 'cfg(kani)'] }

[profile.release]
opt-level = 3 
codegen-units = 1
lto = "fat"
debug = true
