[workspace]
members = ["bluefin", "bluefin-io", "bluefin-proto"]
resolver = "2"

[workspace.package]
version = "0.1.6"
edition = "2021"
description = "An experimental, secure, P2P, transport-layer protocol."
license = "MIT"
repository = "https://github.com/franklee26/bluefin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
local-ip-address = "0.6.3"
rand = "0.9.0-beta.1"
rstest = "0.23.0"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full", "tracing"] }
console-subscriber = "0.4.1"
libc = "0.2.164"
socket2 = "0.5.8"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)', 'cfg(kani)'] }

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
debug = true
