[package]
name = "bluefin-io"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
libc = { workspace = true }
socket2 = { workspace = true }
thiserror = "2.0.9"
tokio = { workspace = true, features = ["full", "tracing"] }
rand = "0.9.0-beta.1"

[dev-dependencies]
local-ip-address = "0.6.3"
rstest = { workspace = true }

[lints]
workspace = true

[features]
macos-fast = []